--- a/index.html
+++ b/index.html
@@ -8,13 +8,40 @@
     <script src="scripts/main.js"></script>
 </head>
 <body>
-    <div class="left-div"></div>
-  
+
+    <div class="left-div">
+      <div class="temperature">
+        <div class="tempfill"></div>
+      </div>
+      <p id="tempnum">90°C</p>
+    </div>
+
     <div class="middle-container">
-      <div class="top-middle-div"></div>
-      <div class="bottom-middle-div"></div>
+      <div class="top-middle-div">
+        <img class="status-icon" id="Left_Indicator" src="assets/img/left.png">
+        <img class="status-icon" id="Check_engine" src="assets/img/CE.jpg">
+        <img class="status-icon" id="High_Beam_Indicator" src="assets/img/High_Beam_Indicator.svg.png">
+        <img class="status-icon" id="sus" src="assets/img/among-us-icon-png-01.png">
+        <img class="status-icon" id="Right_Indicator" src="assets/img/right.png">
+      </div>
+      <div class="bottom-middle-div">
+        <div class="trapezoid-container">
+          <div class="trapezoid">
+            <div class="inner-trapezoid">
+              <p class="speed">42</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
     
-    <div class="right-div"></div>
+    <div class="right-div">
+      <div class="fuel-level">
+        <div class="fuelfill"></div>
+      </div>
+      <p id="tempnum">50%</p>
+    </div>
+
 </body>
 </html>
