temp to just number

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="temperature">
         <div class="tempfill"></div>
       </div>
+      <p id="temptxt">Temperature</p>
       <p id="tempnum">90°C</p>
     </div>
 
@@ -32,7 +33,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
     
