--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             </div>
           </div>
         </div>
+        </div>
+        <div class="ODO-TRIP">
+          <span id="trip">1234km | </span>
+          <span id="ODO">4321km</span>
       </div>
     </div>
     
@@ -40,7 +44,7 @@
       <div class="fuel-level">
         <div class="fuelfill"></div>
       </div>
-      <p id="tempnum">50%</p>
+      <p id="fuelnum">50%</p>
     </div>
 
 </body>
